--- a/style.scss
+++ b/style.scss
@@ -19,6 +19,23 @@
     font-display: swap;
 }
 
+:root{
+    --primary-text-color:#000;
+    --secondary-text-color: #777;
+    --text-blue:#52bedc;
+    --text-white: #fff;
+    --text-yellow:#f8f200;
+    --bg-yellow:#f8f200;
+    --bg-black:#000;
+
+
+    --mobile:320px;
+    --tablet:1024px;
+    --desctop:1920px;
+
+
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -28,4 +45,74 @@
 
 body {
     font-family: "Roboto", sans-serif;
+}
+
+.container{
+    padding: 0 12px;
+    margin: 0 auto;
+}
+
+.header{
+    background-image: url(./images/11.jpg);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    min-height: 760px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: space-between;
+}
+
+.nav{
+    padding-top: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    align-items: center;
+    margin: 0 auto;
+    min-width: 300px;
+    width: 100%;
+    &_icons{
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+}
+.square{
+    padding: 30px 24px;
+    background-color: var(--bg-yellow);
+    margin-bottom: -50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    clip-path: polygon(15% 1%, 100% 0, 100% 85%, 88% 100%, 0% 100%, 0% 15%);
+
+    &_title{
+    font-family:"Archangelsk";
+    font-weight: 400px;
+    font-size: 30px;
+    text-align: center ;
+    color: #000;
+    margin-bottom: 25px;
+}
+ &_btn{
+    background: none;
+    padding: 10px 50px;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 200%;
+    text-align: center;
+    color: #f8f200;
+    background-color: var(--bg-black);
+    cursor: pointer;
+    transition: opacity , 0.5s;
+
+    &:hover {
+        opacity: 0.8;
+    }
+ }
+
+
 }
