--- a/style.scss
+++ b/style.scss
@@ -1,103 +1,144 @@
 @font-face {
-    font-family: "Roboto";
-    src: local("Roboto-Light"), url("./fonts/Roboto-Light.ttf") format("truetype");
-    font-weight: 300;
-    font-display: swap;
+  font-family: "Roboto";
+  src: local("Roboto-Light"), url("./fonts/Roboto-Light.ttf") format("truetype");
+  font-weight: 300;
+  font-display: swap;
 }
 
 @font-face {
-    font-family: "Roboto";
-    src: local("Roboto-Regular"), url("./fonts/Roboto-Regular.ttf") format("truetype");
-    font-weight: 400;
-    font-display: swap;
+  font-family: "Roboto";
+  src: local("Roboto-Regular"),
+    url("./fonts/Roboto-Regular.ttf") format("truetype");
+  font-weight: 400;
+  font-display: swap;
 }
 
 @font-face {
-    font-family: "Archangelsk";
-    src: local("Archangelsk"), url("./fonts/Archangelsk.ttf") format("truetype");
-    font-weight: 400;
-    font-display: swap;
+  font-family: "Archangelsk";
+  src: local("Archangelsk"), url("./fonts/Archangelsk.ttf") format("truetype");
+  font-weight: 400;
+  font-display: swap;
 }
 
-:root{
-    --primary-text-color:#000;
-    --secondary-text-color: #777;
-    --text-blue:#52bedc;
-    --text-white: #fff;
-    --text-yellow:#f8f200;
-    --bg-yellow:#f8f200;
-    --bg-black:#000;
+:root {
+  --primary-text-color: #000;
+  --secondary-text-color: #777;
+  --text-blue: #52bedc;
+  --text-white: #fff;
+  --text-yellow: #f8f200;
+  --bg-yellow: #f8f200;
+  --bg-black: #000;
 
-
-    --mobile:320px;
-    --tablet:1024px;
-    --desctop:1920px;
-
-
+  --mobile: 320px;
+  --tablet: 1024px;
+  --desctop: 1920px;
 }
 
 * {
-    margin: 0;
-    padding: 0;
-    text-decoration: none;
-    list-style: none;
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+  list-style: none;
 }
 
 body {
-    font-family: "Roboto", sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
-.container{
-    padding: 0 12px;
-    margin: 0 auto;
+.container {
+  padding: 0 12px;
+  margin: 0 auto;
+  max-width: 1920px;
+  width: 90%;
+
+  @media (min-width: 1024px) {
+    padding: 0 120px;
+    width: 80%;
+  }
 }
 
-.header{
+.header {
+  background-image: url(./images/11.jpg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  min-height: 760px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: space-between;
+
+  @media (min-width: 400px) {
     background-image: url(./images/11.jpg);
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    min-height: 760px;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-    justify-content: space-between;
+    min-height: 1000px;
+  }
+
+  @media (min-width: 1024px) {
+    background-image: url(./images/12.jpg);
+    min-height: 1000px;
+  }
+
+  @media (min-width:1920px) {
+    align-items: center;
+    
+  }
 }
 
-.nav{
-    padding-top: 20px;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    align-items: center;
-    margin: 0 auto;
-    min-width: 300px;
+.nav {
+  padding-top: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  align-items: center;
+  margin: 0 auto;
+  min-width: 300px;
+  width: 100%;
+  &_icons {
     width: 100%;
-    &_icons{
-        width: 100%;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-    }
-}
-.square{
-    padding: 30px 24px;
-    background-color: var(--bg-yellow);
-    margin-bottom: -50px;
     display: flex;
-    flex-direction: column;
+    justify-content: space-between;
     align-items: center;
-    clip-path: polygon(15% 1%, 100% 0, 100% 85%, 88% 100%, 0% 100%, 0% 15%);
+    max-width: 380px;
+  }
 
-    &_title{
-    font-family:"Archangelsk";
+  @media (min-width: 500px) {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  &__img {
+    width: 200px;
+
+    @media (min-width:1024px) {
+        width: 296px;
+        
+    }
+  }
+}
+.square {
+  padding: 30px 24px;
+  background-color: var(--bg-yellow);
+  margin-bottom: -50px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  clip-path: polygon(15% 1%, 100% 0, 100% 85%, 88% 100%, 0% 100%, 0% 15%);
+
+  &_title {
+    font-family: "Archangelsk";
     font-weight: 400px;
     font-size: 30px;
-    text-align: center ;
+    text-align: center;
     color: #000;
     margin-bottom: 25px;
-}
- &_btn{
+
+    @media (min-width:780px) {
+        font-size: 62px;
+        max-width: 624px;
+        
+    }
+  }
+  &_btn {
     background: none;
     padding: 10px 50px;
     font-weight: 700;
@@ -107,12 +148,37 @@ body {
     color: #f8f200;
     background-color: var(--bg-black);
     cursor: pointer;
-    transition: opacity , 0.5s;
+    transition: opacity, 0.5s;
+
+    @media (min-width:780px) {
+        font-size: 24px;
+        padding: 20px 50px;
+    
+        
+    }
 
     &:hover {
-        opacity: 0.8;
+      opacity: 0.8;
     }
- }
+  }
 
+  @media (min-width:500px) {
+    margin-top: 0;
+    margin-right: 35px;
+  }
+@media (min-width:1024px) {
+    margin-right: 320px;
+    padding: 70px;
+}
 
+}
+.nav_icon img {
+  width: 25px;
+  height: 25px;
+
+  @media (min-width:1024px) {
+    width: 30px;
+    height: 30px;
+    
+  }
 }
