--- a/style.scss
+++ b/style.scss
@@ -58,6 +58,7 @@ body {
 }
 
 .header {
+margin-bottom: 120px;
   background-image: url(./images/11.jpg);
   background-position: center;
   background-size: cover;
@@ -181,4 +182,65 @@ body {
     height: 30px;
     
   }
+}
+.about{
+    &__tittle{
+        font-family:"Archangelsk";
+        font-weight: 400;
+        font-size: 30px;
+        color: #000;
+        margin-bottom: 25px;
+        @media (min-width:768px) {
+            font-size: 62px;
+            width: 620px;
+            
+        }
+        @media (min-width:1024px) {
+            width: 980px;
+            
+        }
+    }
+
+    &__desc{
+        font-size: 16px;
+        line-height: 200%;
+        font-weight: 400;
+        color: #777;
+        margin-bottom: 70px;
+
+        @media (min-width:768px) {
+            font-size: 18px;
+            width: 790px;
+            
+        }
+        @media (min-width:1024px) {
+            width: 980px;
+            
+        }
+    }
+}
+.blue{
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 200%;
+    color: #52bedc;
+}
+.images{
+    @media (min-width:500px) {
+        display: grid;
+        max-width: 1250px;
+        margin: 0 auto;
+        column-gap: 32px;
+        padding: 0 36px;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-areas:"a b"
+                            "c c";
+        
+    }
+    & img {
+        margin-bottom: 32px;
+        object-fit: cover;
+        width: 100%;
+        
+    }
 }
