--- a/style.scss
+++ b/style.scss
@@ -244,3 +244,116 @@ margin-bottom: 120px;
         
     }
 }
+.form{
+  background-color: var(--bg-black);
+
+  &::before{
+    content: "";
+    display: block;
+    width: 100%;
+    background-image: url(./images/polosa.png);
+    background-size: cover;
+    height: 70px;
+  }
+
+  &::after{
+    content: "";
+    display: block;
+    width: 100%;
+    background-image: url(./images/polosadva.png);
+    background-size: cover;
+    height: 70px;
+  }
+
+  &__tittle{
+    font-weight: 400;
+    font-size: 30px;
+    color: #fff;
+    font-family: "Archangelsk";
+    margin-bottom: 25px;
+  }
+
+  &__deck{
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 200%;
+    color: #fff;
+  }
+}
+.form-images{
+  align-items: center;
+  justify-content: space-between;
+
+  &-one{
+    background-image: url(./images/play.png);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 132px;
+    height: 130px;
+  }
+
+  &-two{
+    background-image: url(./images/sony.png);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 132px;
+   height: 130px;
+  }
+}
+
+
+.input{
+  background-color: inherit;
+  padding: 13px 0;
+  border: none;
+  border-bottom: 1px solid #777;
+  font-weight: 300;
+  font-size: 16px;
+  color: #fff;
+  width: 100%;
+  outline: none;
+}
+ 
+.input::placeholder{
+  padding: 13px 0;
+  font-weight: 300;
+  font-size: 16px;
+  color: #fff;
+}
+.input:active,
+:hover
+:focus{
+  outline: 0;
+  outline-offset: 0;
+}
+
+.download{
+  display: block;
+  width: 100%;
+  padding: 50px 0;
+  margin-top: 35px;
+  font-weight: 300;
+  font-size: 16px;
+  text-decoration: underline;
+  text-decoration-skip-ink: none;
+  color: #fff;
+  border: 1px dashed #777;
+  text-align: center;
+  margin-bottom: 35px;
+}
+.input-dowload{
+  width: 1px;
+  height: 1px;
+  z-index: -1;
+  position: absolute;
+}
+.form__btn{
+  padding: 5px 10px;
+  background-color: var(--bg-yellow);
+  font-weight: 700;
+  font-size: 16px;
+  color: #000;
+  border-radius: 15px;
+}
