--- a/style.scss
+++ b/style.scss
@@ -357,3 +357,47 @@ margin-bottom: 120px;
   color: #000;
   border-radius: 15px;
 }
+.input-checkbox{
+  z-index: -1;
+  width: 1px;
+  height: 1px;
+  position: absolute;
+  opacity: 0;
+}
+
+.checkbox{
+  font-weight: 300;
+  font-size: 12px;
+  color: #777;
+  display: block;
+  margin-left: 24px;
+  margin-top: 12px;
+  position: relative;
+}
+
+.checkbox::before{
+  content: "";
+  position: absolute;
+  top: -1px;
+  left: -30px;
+  display:block;
+  border: 1px solid #777 ;
+  width: 14px;
+  height: 14px;
+}
+
+.input-checkbox:checked + label::after{
+  content: "";
+  display: block;
+  width: 12px;
+  height: 12px;
+  background-image: url(./images/tick.svg);
+  background-position: center;
+  background-repeat: no-repeat;
+  position: absolute;
+  top: 0;
+  left: -28px;
+}
+.from-fields{
+  padding-bottom: 70px;
+}
