--- a/style.scss
+++ b/style.scss
@@ -283,6 +283,7 @@ margin-bottom: 120px;
 .form-images{
   align-items: center;
   justify-content: space-between;
+  margin-top: 50px;
 
   &-one{
     background-image: url(./images/play.png);
@@ -400,4 +401,9 @@ margin-bottom: 120px;
 }
 .from-fields{
   padding-bottom: 70px;
+}
+
+.aksia{
+  margin-left: 14px;
+  margin-top: 6px;
 }
