--- a/style.css
+++ b/style.css
@@ -24,9 +24,6 @@
   --text-yellow: #f8f200;
   --bg-yellow: #f8f200;
   --bg-black: #000;
-  --mobile: 320px;
-  --tablet: 1024px;
-  --desctop: 1920px;
 }
 
 * {
@@ -38,6 +35,7 @@
 
 body {
   font-family: "Roboto", sans-serif;
+  overflow-x: hidden;
 }
 
 .container {
@@ -46,16 +44,17 @@ body {
   max-width: 1920px;
   width: 90%;
 }
-@media (min-width: 1024px) {
+@media (min-width: 768px) {
   .container {
-    padding: 0 120px;
+    padding: 0 70px;
     width: 80%;
   }
 }
 
 .header {
   margin-bottom: 120px;
-  background-image: url(./images/11.jpg);
+  width: 100%;
+  background-image: url(./images/header-bg.jpg);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -67,13 +66,13 @@ body {
 }
 @media (min-width: 400px) {
   .header {
-    background-image: url(./images/11.jpg);
+    background-image: url(./images/header-bg-tablet.jpg);
     min-height: 1000px;
   }
 }
 @media (min-width: 1024px) {
   .header {
-    background-image: url(./images/12.jpg);
+    background-image: url(./images/header-bg-desctop.jpg);
     min-height: 1000px;
   }
 }
@@ -84,27 +83,27 @@ body {
 }
 
 .nav {
+  min-width: 290px;
+  width: 100%;
   padding-top: 20px;
   display: flex;
   flex-direction: column;
   gap: 10px;
   align-items: center;
   margin: 0 auto;
-  min-width: 300px;
-  width: 100%;
-}
-.nav_icons {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  max-width: 380px;
 }
 @media (min-width: 500px) {
   .nav {
     flex-direction: row;
     justify-content: space-between;
   }
+}
+.nav__icons {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  max-width: 380px;
 }
 .nav__img {
   width: 200px;
@@ -125,22 +124,24 @@ body {
   -webkit-clip-path: polygon(15% 1%, 100% 0, 100% 85%, 88% 100%, 0% 100%, 0% 15%);
           clip-path: polygon(15% 1%, 100% 0, 100% 85%, 88% 100%, 0% 100%, 0% 15%);
 }
-.square_title {
+.square__title {
+  max-width: 300px;
   font-family: "Archangelsk";
-  font-weight: 400px;
+  font-weight: 400;
   font-size: 30px;
   text-align: center;
   color: #000;
   margin-bottom: 25px;
 }
 @media (min-width: 780px) {
-  .square_title {
+  .square__title {
     font-size: 62px;
     max-width: 624px;
   }
 }
-.square_btn {
+.square__btn {
   background: none;
+  border: none;
   padding: 10px 50px;
   font-weight: 700;
   font-size: 20px;
@@ -152,18 +153,20 @@ body {
   transition: opacity, 0.5s;
 }
 @media (min-width: 780px) {
-  .square_btn {
+  .square__btn {
     font-size: 24px;
     padding: 20px 50px;
   }
 }
-.square_btn:hover {
+.square__btn:hover {
   opacity: 0.8;
 }
 @media (min-width: 500px) {
   .square {
-    margin-top: 0;
+    margin-bottom: 0;
     margin-right: 35px;
+    -webkit-clip-path: polygon(9% 1%, 100% 0, 100% 79%, 89% 100%, 0% 100%, 0% 18%);
+            clip-path: polygon(9% 1%, 100% 0, 100% 79%, 89% 100%, 0% 100%, 0% 18%);
   }
 }
 @media (min-width: 1024px) {
@@ -172,19 +175,24 @@ body {
     padding: 70px;
   }
 }
+@media (min-width: 1920px) {
+  .square {
+    margin-left: 900px;
+  }
+}
 
-.nav_icon img {
+.nav__icon img {
   width: 25px;
   height: 25px;
 }
 @media (min-width: 1024px) {
-  .nav_icon img {
+  .nav__icon img {
     width: 30px;
     height: 30px;
   }
 }
 
-.about__tittle {
+.about__title {
   font-family: "Archangelsk";
   font-weight: 400;
   font-size: 30px;
@@ -192,13 +200,13 @@ body {
   margin-bottom: 25px;
 }
 @media (min-width: 768px) {
-  .about__tittle {
+  .about__title {
     font-size: 62px;
     width: 620px;
   }
 }
 @media (min-width: 1024px) {
-  .about__tittle {
+  .about__title {
     width: 980px;
   }
 }
@@ -212,7 +220,7 @@ body {
 @media (min-width: 768px) {
   .about__desc {
     font-size: 18px;
-    width: 790px;
+    max-width: 790px;
   }
 }
 @media (min-width: 1024px) {
@@ -230,12 +238,12 @@ body {
 
 @media (min-width: 500px) {
   .images {
-    display: grid;
     max-width: 1250px;
     margin: 0 auto;
     -moz-column-gap: 32px;
          column-gap: 32px;
     padding: 0 36px;
+    display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-areas: "a b" "c c";
   }
@@ -247,14 +255,54 @@ body {
   width: 100%;
 }
 
+.img1 {
+  grid-area: a;
+}
+
+.img2 {
+  grid-area: b;
+}
+
+.img3 {
+  grid-area: c;
+}
+
+.element {
+  position: absolute;
+  top: -60px;
+  left: 12px;
+  display: block;
+  width: 62px;
+  height: 62px;
+  background-image: url(./images/akciya.svg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+@media (min-width: 780px) {
+  .element {
+    width: 132px;
+    height: 132px;
+    top: 0;
+  }
+}
+@media (min-width: 1340px) {
+  .element {
+    left: 5%;
+    transform: translate(-50%, 0);
+    top: 107px;
+  }
+}
+
 .form {
+  position: relative;
   background-color: var(--bg-black);
 }
 .form::before {
   content: "";
   display: block;
   width: 100%;
-  background-image: url(./images/polosa.png);
+  background-image: url(./images/form-top.png);
   background-size: cover;
   height: 70px;
 }
@@ -262,47 +310,122 @@ body {
   content: "";
   display: block;
   width: 100%;
-  background-image: url(./images/polosadva.png);
+  background-image: url(./images/form-bottom.png);
   background-size: cover;
   height: 70px;
 }
-.form__tittle {
+.form__title {
   font-weight: 400;
   font-size: 30px;
   color: #fff;
   font-family: "Archangelsk";
   margin-bottom: 25px;
 }
-.form__deck {
+@media (min-width: 780px) {
+  .form__title {
+    font-size: 62px;
+  }
+}
+@media (min-width: 1340px) {
+  .form__title {
+    width: 950px;
+    margin-left: 150px;
+  }
+}
+.form__desc {
   font-weight: 400;
   font-size: 16px;
   line-height: 200%;
   color: #fff;
+  margin-bottom: 70px;
+}
+@media (min-width: 768px) {
+  .form__desc {
+    font-size: 18px;
+  }
+}
+@media (min-width: 1340px) {
+  .form__desc {
+    width: 950px;
+  }
+}
+
+.wrapper {
+  position: relative;
+}
+@media (min-width: 780px) {
+  .wrapper {
+    display: flex;
+    align-items: flex-start;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+  }
+}
+@media (min-width: 1024px) {
+  .wrapper {
+    max-width: 1280px;
+    margin: 0 auto;
+  }
 }
 
 .form-images {
+  margin-top: 65px;
+  display: flex;
   align-items: center;
   justify-content: space-between;
-  margin-top: 50px;
+  margin-bottom: 25px;
+}
+@media (min-width: 1024px) {
+  .form-images {
+    flex-direction: column;
+  }
+}
+@media (min-width: 1350px) {
+  .form-images {
+    flex-direction: row;
+    margin-top: 350px;
+    margin-left: -100px;
+  }
 }
 .form-images-one {
-  background-image: url(./images/play.png);
+  background-image: url(./images/image-one-mobile.png);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  width: 132px;
-  height: 130px;
+  min-width: 132px;
+  min-height: 130px;
+}
+@media (min-width: 1024px) {
+  .form-images-one {
+    background-image: url(./images/image-one-tablet.png);
+    width: 460px;
+    height: 456px;
+  }
+}
+@media (min-width: 1280px) {
+  .form-images-one {
+    margin-right: -130px;
+    z-index: 10;
+  }
 }
 .form-images-two {
-  background-image: url(./images/sony.png);
+  background-image: url(./images/image-two-mobile.png);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  width: 132px;
-  height: 130px;
+  min-width: 132px;
+  min-height: 130px;
+}
+@media (min-width: 1024px) {
+  .form-images-two {
+    background-image: url(./images/image-two-tablet.png);
+    width: 460px;
+    height: 456px;
+  }
 }
 
 .input {
+  width: 100%;
   background-color: inherit;
   padding: 13px 0;
   border: none;
@@ -310,26 +433,38 @@ body {
   font-weight: 300;
   font-size: 16px;
   color: #fff;
-  width: 100%;
-  outline: none;
+}
+@media (min-width: 768px) {
+  .input {
+    font-size: 18px;
+  }
 }
 
-.input::-moz-placeholder {
+.input-text::-moz-placeholder {
   padding: 13px 0;
   font-weight: 300;
   font-size: 16px;
   color: #fff;
 }
 
-.input::placeholder {
+.input-text::placeholder {
   padding: 13px 0;
   font-weight: 300;
   font-size: 16px;
   color: #fff;
 }
+@media (min-width: 768px) {
+  .input-text::-moz-placeholder {
+    font-size: 18px;
+  }
+  .input-text::placeholder {
+    font-size: 18px;
+  }
+}
 
-.input:active,
-:hover :focus {
+.input-text:active,
+:hover,
+:focus {
   outline: 0;
   outline-offset: 0;
 }
@@ -349,8 +484,13 @@ body {
   text-align: center;
   margin-bottom: 35px;
 }
+@media (min-width: 768px) {
+  .download {
+    font-size: 18px;
+  }
+}
 
-.input-dowload {
+.input-download {
   width: 1px;
   height: 1px;
   z-index: -1;
@@ -358,12 +498,17 @@ body {
 }
 
 .form__btn {
-  padding: 5px 10px;
+  padding: 20px 50px;
   background-color: var(--bg-yellow);
   font-weight: 700;
   font-size: 16px;
   color: #000;
-  border-radius: 15px;
+  margin-bottom: 14px;
+}
+@media (min-width: 768px) {
+  .form__btn {
+    font-size: 18px;
+  }
 }
 
 .input-checkbox {
@@ -377,14 +522,13 @@ body {
 .checkbox {
   font-weight: 300;
   font-size: 12px;
-  color: #777;
+  color: #fff;
   display: block;
   margin-left: 24px;
-  margin-top: 12px;
   position: relative;
 }
 
-.checkbox::before {
+.input-checkbox + label::before {
   content: "";
   position: absolute;
   top: -1px;
@@ -408,11 +552,15 @@ body {
   left: -28px;
 }
 
-.from-fields {
+.form-fields {
   padding-bottom: 70px;
 }
 
-.aksia {
-  margin-left: 14px;
-  margin-top: 6px;
+.form-description {
+  max-width: 460px;
+}
+@media (min-width: 780px) {
+  .form-description {
+    margin-top: 160px;
+  }
 }/*# sourceMappingURL=style.css.map */
